[package]
name = "isolator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.6.1"
prost = "0.9.0"
futures = "0.3.17"
futures-core = "0.3.17"
futures-util = "0.3.17"
deno_core = "0.107.0"
threadpool = "1.8.1"
tokio-stream = "0.1.8"
async-stream = "0.3.2"
uuid = { version = "0.8.2", features = ["v4"]}
tokio = { version = "1.13", features = ["rt", "macros", "sync"] }

ext_webidl = { path = "ext/webidl" }
ext_web = { path = "ext/web" }
ext_timers = { path = "ext/timers" }
ext_resources = { path = "ext/resources" }
ext_console = { path = "ext/console" }

[build-dependencies]
tonic-build = "0.6.0"
deno_core = "0.107.0"

ext_webidl = { path = "ext/webidl" }
ext_web = { path = "ext/web" }
ext_timers = { path = "ext/timers" }
ext_resources = { path = "ext/resources" }
ext_console = { path = "ext/console" }
